WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316866
Tap does not extend to full grammar range.
https://bugs.webkit.org/show_bug.cgi?id=316866
Summary
Tap does not extend to full grammar range.
Megan Gardner
Reported
2026-06-10 17:36:50 PDT
Tap does not extend to full grammar range.
Attachments
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2026-06-10 17:36:51 PDT
<
rdar://problem/178998221
>
Megan Gardner
Comment 2
2026-06-10 17:39:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66942
EWS
Comment 3
2026-06-11 09:42:21 PDT
Committed
315029@main
(6c2d1f6c2130): <
https://commits.webkit.org/315029@main
> Reviewed commits have been landed. Closing PR #66942 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug