Tap does not extend to full grammar range. https://bugs.webkit.org/show_bug.cgi?id=316866 rdar://178998221

Reviewed by Aditya Keerthi and Alex Christensen.

Test: editing/selection/ios/select-word-for-replacement-extends-grammar-marker.html

When tapping in an editable region on iOS, extendSelectionForReplacement
extends the caret to cover any DictationAlternatives or CorrectionIndicator
marker that contains the caret. Grammar markers were not included, so
tapping inside a multi-word grammar suggestion only selected the word
under the caret rather than the entire suggestion range.

Add DocumentMarkerType::Grammar to the set of marker types searched, so
the full grammar range is selected on tap.

* LayoutTests/editing/selection/ios/select-word-for-replacement-extends-grammar-marker-expected.txt: Added.
* LayoutTests/editing/selection/ios/select-word-for-replacement-extends-grammar-marker.html: Added.
* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::extendSelectionForReplacement):

Canonical link: https://commits.webkit.org/315029@main